--- a/index.css
+++ b/index.css
@@ -250,6 +250,95 @@ button a {
   color: black;
 }
 
+.pick-date-wrapper {
+  width: 100%;
+  background: #f5c645;
+  border-radius: 10px;
+}
+.pick-date-wrapper header {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  justify-content: space-between;
+}
+header .icons {
+  display: flex;
+  flex-direction: row;
+}
+header .icons span {
+  height: 38px;
+  width: 38px;
+  margin: 0 1px;
+  cursor: pointer;
+  color: #878787;
+  text-align: center;
+  line-height: 38px;
+  font-size: 1.9rem;
+  user-select: none;
+  border-radius: 50%;
+}
+.icons span:last-child {
+  margin-right: -10px;
+}
+header .icons span:hover {
+  background: #f2f2f2;
+}
+header .current-date {
+  font-size: 1.45rem;
+  font-weight: 500;
+}
+.calendar {
+  padding: 10px;
+}
+.calendar ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  text-align: center;
+  padding: 0;
+}
+.calendar .days {
+  margin-bottom: 20px;
+}
+.calendar li {
+  color: #333;
+  width: calc(100% / 7);
+  font-size: 1.07rem;
+}
+.calendar .weeks li {
+  font-weight: 500;
+  cursor: default;
+}
+.calendar .days li {
+  z-index: 1;
+  cursor: pointer;
+  position: relative;
+  margin-top: 30px;
+}
+.days li.inactive {
+  color: #aaa;
+}
+.days li.active {
+  color: #fff;
+}
+.days li::before {
+  position: absolute;
+  content: "";
+  left: 50%;
+  top: 50%;
+  height: 40px;
+  width: 40px;
+  z-index: -1;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+.days li.active::before {
+  background: black;
+}
+.days li:not(.active):hover::before {
+  background: #f2f2f2;
+}
+
 .event-form form div input {
   height: 30px;
   border: 1px solid #f5c645;
@@ -536,6 +625,16 @@ form div {
 
   .event-form form {
     width: 275px;
+  }
+
+  header .current-date {
+    font-size: 15px;
+  }
+
+  .calendar li {
+    color: #333;
+    width: calc(100% / 7);
+    font-size: 13px;
   }
 
   .event-text {
